--- a/emi/emi_refs.bib
+++ b/emi/emi_refs.bib
@@ -1,8 +1,8 @@
-@techreport{itu372,
-  title={ITU-R P.372-12: Radio Noise},
-  author={ITU, Recommendation P},
-  institution={R-REC-P. 372/en},
+@misc{itu372-16,
+  title={{ITU-R P.372-16: Radio Noise}},
+  year={2022}
 }
+
 @misc{wikipedia_pulse,
   title = {{Pulse Wave}},
   note = {\url{https://en.wikipedia.org/wiki/Pulse_wave}}
@@ -59,3 +59,20 @@ noise cancelling, antennas phasing}},
   title = {{Measuring HF Noise Around a City}},
   note = {\url{https://www.rowetel.com/?p=7964}}
 }
+
+@misc{w8ji_radio_noise,
+  title = {{Radio Noise}},
+  note = {\url{https://www.w8ji.com/noise.htm}}
+}
+
+@misc{vu2nsb_s_meter,
+  title = {{Interpretation of S-Meter Noise Floor in HF Radio Receivers }},
+  note = {\url{https://vu2nsb.com/s-meter-noise-floor-hf-receivers/}}
+}
+
+@misc{wellbrook,
+  title = {{Wellbrook Loop Antennas}},
+  note = {\url{https://www.wellbrook.uk.com/loopantennas/}}
+}
+
+
