--- a/emi/measurement.tex
+++ b/emi/measurement.tex
@@ -1,7 +1,7 @@
 % Title: gl2ps_renderer figure
 % Creator: GL2PS 1.4.2, (C) 1999-2020 C. Geuzaine
 % For: Octave
-% CreationDate: Sat Jun 10 10:31:43 2023
+% CreationDate: Sat Jun 10 11:07:47 2023
 \setlength{\unitlength}{1pt}
 \begin{picture}(0,0)
 \includegraphics[scale=1]{measurement-inc}
@@ -32,4 +32,5 @@
 \fontsize{8}{0}\selectfont\put(36.4026,130.25){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-110}}}}
 \fontsize{8}{0}\selectfont\put(155.25,19.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{Freq (MHz)}}}}
 \fontsize{8}{0}\selectfont\put(20.4026,81.625){\rotatebox{90}{\makebox(0,0)[b]{\textcolor[rgb]{0.15,0.15,0.15}{{dBm/Hz}}}}}
+\fontsize{8}{0}\selectfont\put(224.495,115.245){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{P.372 residential}}}}
 \end{picture}
